تعديل على index.html

--- a/index.html
+++ b/index.html
@@ -31,40 +31,40 @@
             < <div class="main">
                 <h2>🍔 This is the Food Section</h2>
                 <p>A variety of fresh meals and delicious fast food.</p>
-                <img src="/img/ea.jpg" alt="">
+                <img src="./img/ea.jpg" alt="">
 
         </div>
         <div class="main one">
             <h2>🥤 This is the Drinks Section</h2>
             <p>Enjoy the best juices and refreshing cold beverages.</p>
-            <img src="/img/jo.jpg" alt="">
+            <img src="./img/jo.jpg" alt="">
 
         </div>
         <div class="main two">
             <h2>👕 This is the Clothing Section</h2>
             <p>Latest fashion trends for men, women, and kids.</p>
-            <img src="/img/co.jpg" alt="">
+            <img src="./img/co.jpg" alt="">
 
         </div>
 
         <div class="main th">
             <h2>🎁 This is the Gifts Section</h2>
             <p>Special gifts for all occasions at great prices.</p>
-            <img src="/img/f.jpg" alt="">
+            <img src="./img/f.jpg" alt="">
 
         </div>
 
         <div class="main d">
             <h2>📱 This is the Electronics Section</h2>
             <p>Great deals on phones, smart devices, and accessories.</p>
-            <img src="/img/e.jpg" alt="">
+            <img src="./img/e.jpg" alt="">
 
         </div>
 
         <div class="main o">
             <h2>🧼 This is the Personal Care Section</h2>
             <p>Trusted products for your beauty and health.</p>
-            <img src="/img/o.jpg" alt="">
+            <img src="./img/o.jpg" alt="">
 
         </div>
 
